Readme collapsed on mobile. Fixes #21

--- a/src/ui/Browser/Browser.css
+++ b/src/ui/Browser/Browser.css
@@ -19,3 +19,9 @@
   max-height: 4.5rem;
   overflow: hidden;
 }
+.Browser .visuals {
+}
+.Browser .visuals .Markdown {
+  padding: 1rem;
+  height: 100%;
+}
