--- a/src/ui/shared/Markdown.css
+++ b/src/ui/shared/Markdown.css
@@ -1,6 +1,5 @@
 
 .Markdown {
-  padding: 35px;
   background-color: #505050;
   color: white;
 }
